# intent_clf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.dvc/: config
configs/sklearn/: test.yaml  train.yaml
configs/sklearn/checkpoints/: local.yaml
configs/sklearn/data_transformer/: pipeline_cnt.yaml
configs/sklearn/datamodule/: rtk.yaml
configs/sklearn/experiment/: bert_transformer.yaml  catboost.yaml  example.yaml  linear_svm.yaml  logistic_regression.yaml
configs/sklearn/logger/: wandb.yaml
configs/sklearn/model/: logistic_regression.yaml
data/raw/: .gitignore  test.xlsx.dvc  train.xlsx.dvc
logs/debugs/runs/gaussian/2022-06-14_12-07-39/.hydra/: config.yaml  hydra.yaml
logs/debugs/runs/gaussian/2022-06-14_12-12-11/.hydra/: hydra.yaml
logs/debugs/runs/sklearn_base/2022-06-13_22-25-40/.hydra/: config.yaml  hydra.yaml
logs/debugs/runs/sklearn_base/2022-06-13_22-27-42/.hydra/: config.yaml  (+1 more)
notebooks/eda/: 11062022_eda_first_observe_1.ipynb  11062022_eda_show_text.ipynb  12062022_eda_stats.ipynb  common.py
notebooks/error_analysis/: 14062022_error_analysis.ipynb
notebooks/report/: Bardakov_AA.ipynb
notebooks/research/: 14062022_research_avg_mean_word.ipynb
rtk_mult_clf/: __init__.py  metrics.py  testing_pipeline_sklearn.py  training_pipeline_sklearn.py
rtk_mult_clf/datamodules/: datamodule_sklearn.py
rtk_mult_clf/features/: transformers.py
rtk_mult_clf/models/: sklearn_model.py
rtk_mult_clf/predictor/: engine.py
rtk_mult_clf/utils/: __init__.py
scripts/: create_req_txt.cmd  pre-commit-run.cmd  run_experiment.cmd  run_predict_sklearn_model.cmd  run_train_sklearn_model.cmd
tasks/: predict_sklearn_model.py  train_sklearn_model.py
tests/: test_rtk_mult_clf.py
(+82 files in other folders)
