[tool.poetry]
name = "rtk_mult_clf"
version = "0.1.0"
description = ""
authors = ["exotol <artem.bardakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.1"
pandas = "^1.4.2"
numpy = "^1.22.4"
wandb = "^0.12.18"
rich = "^12.4.4"
torch = "^1.11.0"
dvc = {extras = ["gdrive"], version = "^2.11.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
black = {extras = ["d"], version = "^22.3.0"}
mypy = "^0.961"
pre-commit = "^2.19.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
nbstripout = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
