[tool.poetry]
name = "rtk_mult_clf"
version = "0.1.0"
description = ""
authors = ["exotol <artem.bardakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.1"
pandas = "^1.4.2"
numpy = "^1.22.4"
wandb = "^0.12.18"
rich = "^12.4.4"
torch = "^1.11.0"
dvc = {extras = ["gdrive"], version = "^2.11.0"}
python-dotenv = "^0.20.0"
openpyxl = "^3.0.10"
tqdm = "^4.64.0"
razdel = "^0.5.0"
hydra-core = "^1.2.0"
pytorch-lightning = "^1.6.4"
hydra-colorlog = "^1.2.0"
catboost = "^1.0.6"
sentence-transformers = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
black = {extras = ["d"], version = "^22.3.0"}
mypy = "^0.961"
pre-commit = "^2.19.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
nbstripout = "^0.5.0"
wordcloud = {path = "wheels/wordcloud-1.8.1-cp39-cp39-win_amd64.whl"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
